# smog_usage_stats

./: .gitignore  .todo  LICENSE  README.md  TODO.txt  pyproject.toml  requirements.txt  setup.py
TODOS/: OOP_Lookup.py  Pokedex_Ver_SV2.csv  individual_lookup.py  usageParseTest.py
TODOS/helpers/: pokedex_builder.py  pokelist.py
data/: .~lock.app_users.users.csv#
data/json/: 2022-08_gen7ubers.json
data/reference/: pokedata_handler.py  pokedex.json  usageParseTest.py
deprecated/: DBManager.py  db_updater.py  smogon_pull.py
deprecated/helpers/: typechart.py
scripts/: DBManager.py  IndividualLookup.py  SQLInterface.py  Search.py  Update.py  UsageStatsLookup.py  Validation.py  __init__.py  _utils.py  db_updater.py  gui.py  legal_urls.txt  plotting.py  smogon_pull.py  statsparsetest.txt
scripts/deprecated/: DBManager.py
scripts/helpers/: pokedex_builder.py  pokelist.py  typechart.py
smog_usage_stats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/smog_usage_stats/: IndividualLookup.py  SQLInterface.py  Search.py  Update.py  UsageStatsLookup.py  Validation.py  __init__.py  chaosStats.py  search.py  usageStats.py  validator_util.py
src/smog_usage_stats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: 2023-09-mono-psychic-test.csv  2023-09-mono-psychic-test.txt  2023-09_gen9ou-1500.txt  2023-09_gen9ou_test.csv  conftest.py  test_basic_stats_search.py  test_mono_stats_search.py  test_update_a_database.py
